done Confirm Password

--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,7 @@
     </div>
     <!-- End of Content -->
     <!-- Footer -->
-    <footer id="footer" class="text-center mt-5 pt-5 pb-3">
+    <footer id="footer" class="text-center mt-5 pt-5 pb-3 social-links">
         <hr id="footer-hr" class="mb-5">
         <ul class="pb-1">
             <li class="d-inline-block"><a href="https://www.linkedin.com/in/crisaianvergara/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl mx-2"></i></a></li>
