--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <!-- End of Twitter -->
                 <!-- Social Links -->
-                <div class="widget text-center">
+                <div class="widget text-center social-links">
                     <ul>
                         <li class="d-inline-block"><a href="https://www.linkedin.com/in/crisaianvergara/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl mx-2"></i></a></li>
                         <li class="d-inline-block"><a href="https://github.com/crisaianvergara" target="_blank"><i class="fa-brands fa-github fa-2xl mx-2"></i></i></a></li>
