--- a/blogproject/templates/index.html
+++ b/blogproject/templates/index.html
@@ -3,9 +3,9 @@
     <!-- Section Home -->
     <section id="home-section">
         <!-- Row -->
-        <div class="row justify-content-evenly">
+        <div class="row justify-content-between">
             <!-- Column 1 -->
-            <div class="col-lg-8">
+            <div class="col-lg-7">
                 {% for post in posts %}
                     <div class="card bg-transparent post-item border-0 mb-5">
                         <a class="post-hover" href="{{ url_for('view_post', post_id = post.id) }}">
@@ -39,21 +39,10 @@
             </div>
             <!-- End of Column 1 -->
             <!-- Column 2 -->
-            <div class="col-lg-3">
+            <div class="col-lg-4">
                 <!-- Twitter -->
                 <div class="widget">
-                    <blockquote class="twitter-tweet">
-                        <p lang="en" dir="ltr">Sunsets don&#39;t get much better than this one over 
-                            <a href="https://twitter.com/GrandTetonNPS?ref_src=twsrc%5Etfw">@GrandTetonNPS</a>
-                            . 
-                            <a href="https://twitter.com/hashtag/nature?src=hash&amp;ref_src=twsrc%5Etfw">#nature</a> 
-                            <a href="https://twitter.com/hashtag/sunset?src=hash&amp;ref_src=twsrc%5Etfw">#sunset</a> 
-                            <a href="http://t.co/YuKy2rcjyU">pic.twitter.com/YuKy2rcjyU</a>
-                        </p>
-                        &mdash; US Department of the Interior (@Interior) 
-                        <a href="https://twitter.com/Interior/status/463440424141459456?ref_src=twsrc%5Etfw">May 5, 2014</a>
-                    </blockquote>
-                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Tnx for the class last saturday <a href="https://twitter.com/hashtag/learnteachcode?src=hash&amp;ref_src=twsrc%5Etfw">#learnteachcode</a> <a href="https://twitter.com/hashtag/ReactNative?src=hash&amp;ref_src=twsrc%5Etfw">#ReactNative</a> <a href="https://t.co/iOP8k1m48j">pic.twitter.com/iOP8k1m48j</a></p>&mdash; Cris-aian Vergara (@The21stKuruno) <a href="https://twitter.com/The21stKuruno/status/973607193915224064?ref_src=twsrc%5Etfw">March 13, 2018</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
                 <!-- End of Twitter -->
                 <!-- Social Links -->
