--- a/blogproject/templates/login.html
+++ b/blogproject/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <!-- Section Login -->
-    <section id="login-section" class="auth-form">
+    <section id="login-section" class="auth-form pb-5">
         <!-- Card -->
         <div class="card col-lg-5 m-auto rounded-0 border-0 shadow auth-form">
             <!-- Card Header -->
