--- a/blogproject/templates/base.html
+++ b/blogproject/templates/base.html
@@ -11,6 +11,8 @@
         <title> Sulat Aian - Home </title>
     {% endif %}
     <!-- End of Title -->
+    <!-- Favicon -->
+    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
     <!-- Bootstrap 5 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <!-- My Styles -->
